--- a/src/components/mobileNavbar/mobileNavigation/MobileNavigation.module.css
+++ b/src/components/mobileNavbar/mobileNavigation/MobileNavigation.module.css
@@ -1,17 +1,23 @@
+.transparent {
+  background-color: transparent !important; }
+  .transparent .mobile-nav__brand-and-toggles a[class*="brand-name"]:link, .transparent .mobile-nav__brand-and-toggles a[class*="brand-name"]:visited {
+    color: #fff !important; }
+
 .mobile-nav {
-  background-color: transparent;
+  background-color: #fff;
   position: fixed;
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 1000; }
+  z-index: 1000;
+  transition: all 0.2s; }
   .mobile-nav__brand-and-toggles {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 1.75rem 2.5rem; }
     .mobile-nav__brand-and-toggles a[class*="brand-name"]:link, .mobile-nav__brand-and-toggles a[class*="brand-name"]:visited {
-      color: #fff;
+      color: #222222;
       text-transform: unset;
       font-weight: 400;
       letter-spacing: 0.3rem; }
