create section title, plain description box, image description button components and finalize section industry experts alongside finishing sass styling, also create some new variables and mixins for sass

--- a/src/basicStyles/index.scss
+++ b/src/basicStyles/index.scss
@@ -20,9 +20,10 @@ body {
   line-height: 1;
   max-width: 140rem;
   font-weight: 400;
+
   height: 100%;
   -webkit-font-smoothing: antialiased;
-  color: $primary;
+  color: $darkText;
   font-family: $spartan;
   margin: 0 auto;
 }
