--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,4 +1,21 @@
 .home .hero div[class*="textbox"] {
   width: 73%; }
 
+.industry-expert {
+  display: flex;
+  flex-direction: column; }
+  .industry-expert__heading-and-description, .industry-expert__image-descriptions {
+    display: flex;
+    flex-direction: column; }
+  .industry-expert__heading-and-description div[class*="plain-description-box"] {
+    flex-basis: 40rem;
+    width: 60%; }
+  .industry-expert__image-descriptions {
+    padding: 0 2.5rem;
+    position: relative;
+    top: -23rem;
+    margin-bottom: -21rem; }
+    .industry-expert__image-descriptions div[class*="container"] {
+      height: 37.5rem; }
+
 /*# sourceMappingURL=Home.module.css.map */
