--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,9 +1,40 @@
 @import "../../scss/variables";
+@import "../../scss/mixin";
 
 .home {
   .hero {
     div[class*="textbox"] {
       width: 73%;
+    }
+  }
+}
+
+.industry-expert {
+  display: flex;
+  flex-direction: column;
+
+  &__heading-and-description,
+  &__image-descriptions {
+    @include flexColumn();
+  }
+
+  &__heading-and-description {
+    div[class*="plain-description-box"] {
+      flex-basis: 40rem;
+      width: 60%;
+    }
+  }
+
+  &__image-descriptions {
+    padding: 0 2.5rem;
+    // transform: translateY(-20rem);
+
+    position: relative;
+    top: -23rem;
+    margin-bottom: -21rem;
+
+    div[class*="container"] {
+      height: 37.5rem;
     }
   }
 }
