--- a/src/basicStyles/index.css
+++ b/src/basicStyles/index.css
@@ -18,7 +18,7 @@ body {
   font-weight: 400;
   height: 100%;
   -webkit-font-smoothing: antialiased;
-  color: #af0061;
+  color: #222222;
   font-family: "League Spartan", sans-serif;
   margin: 0 auto; }
 
