--- a/src/components/mobileNavbar/mobileNavigation/MobileNavigation.module.scss
+++ b/src/components/mobileNavbar/mobileNavigation/MobileNavigation.module.scss
@@ -3,6 +3,8 @@
 
 .transparent {
   background-color: transparent !important;
+  box-shadow: none !important;
+
   .mobile-nav__brand-and-toggles {
     a[class*="brand-name"] {
       &:link,
@@ -21,6 +23,7 @@
   left: 0;
   z-index: 1000;
   transition: all 0.2s;
+  box-shadow: 0 2rem 4rem rgba($darkText, 0.1);
 
   &__brand-and-toggles {
     display: flex;
