--- a/src/components/mobileNavbar/mobileNavigationInnerMenu/MobileNavigationInnerMenu.module.css
+++ b/src/components/mobileNavbar/mobileNavigationInnerMenu/MobileNavigationInnerMenu.module.css
@@ -67,8 +67,7 @@
       font-size: 2.4rem;
       text-transform: capitalize;
       display: inline-block;
-      color: #fff;
-      border-bottom: 0.2rem solid #fff; }
+      color: #fff; }
     .mobile-navigation-innermenu__list-of-options__single-option span,
     .mobile-navigation-innermenu__list-of-options__single-option a:link,
     .mobile-navigation-innermenu__list-of-options__single-option a:visited {
