--- a/src/components/plainDescriptionBox/PlainDescriptionBox.module.scss
+++ b/src/components/plainDescriptionBox/PlainDescriptionBox.module.scss
@@ -4,14 +4,13 @@
 .plain-description-box {
   width: 100%;
   height: 100%;
-  background-color: $primary;
+  background-color: $white;
 
   &__description {
     font-size: 1.7rem;
     line-height: 1.3;
     font-family: inherit;
-    padding: 2.5rem;
-
-    color: $white;
+    padding: 0 2.5rem;
+    color: $gray;
   }
 }
