--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -12,6 +12,7 @@
 .industry-expert {
   display: flex;
   flex-direction: column;
+  margin-bottom: 6rem;
 
   &__heading-and-description,
   &__image-descriptions {
@@ -22,6 +23,12 @@
     div[class*="plain-description-box"] {
       flex-basis: 40rem;
       width: 60%;
+      background-color: $primary;
+
+      p[class*="plain-description-box__description"] {
+        padding-top: 2.5rem;
+        color: $white;
+      }
     }
   }
 
@@ -31,7 +38,7 @@
 
     position: relative;
     top: -23rem;
-    margin-bottom: -21rem;
+    margin-bottom: -23rem;
 
     div[class*="container"] {
       height: 37.5rem;
