--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,6 +8,9 @@ $backdropColor: rgba(17, 17, 17, 0.36);
 $veryLightGray: #ddd;
 $gray: darken($white, 50%);
 
+//margins and paddings
+$sectionMargin: 5rem;
+
 //font family
 $spartan: "League Spartan", sans-serif;
 
