--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -13,6 +13,7 @@ $sectionMargin: 5rem;
 
 //font family
 $spartan: "League Spartan", sans-serif;
+$roboto: "Roboto", sans-serif;
 
 //animation
 $basic: all 0.2s ease-out;
