--- a/src/components/mobileNavbar/mobileNavigationInnerMenu/MobileNavigationInnerMenu.module.scss
+++ b/src/components/mobileNavbar/mobileNavigationInnerMenu/MobileNavigationInnerMenu.module.scss
@@ -8,9 +8,11 @@
   top: 0;
   left: 0;
   transform: translateX(100%);
-  transition: all 0.2s;
-  background-color: rgba($primary, 0.85);
+  background-color: rgba($primary, 0.9);
+  backdrop-filter: blur(1rem);
   padding-inline: 3.5rem;
+  transition: $basic;
+  font-family: $roboto !important;
 
   &__closelisticon-container {
     .closelisticon {
@@ -35,7 +37,8 @@
       align-items: center;
       font-family: inherit;
       gap: 1.4rem;
-      font-size: 1.8rem;
+      font-size: 1.5rem;
+      font-weight: 300 !important;
       color: $white;
 
       img {
@@ -63,7 +66,6 @@
       }
 
       // for <span> css rules see below
-
       span,
       a:link,
       a:visited {
@@ -80,6 +82,7 @@
       a:link,
       a:visited {
         font-size: 2.4rem;
+        font-weight: 500;
         text-transform: capitalize;
         display: inline-block;
         color: $white;
@@ -90,7 +93,8 @@
       span,
       a:link,
       a:visited {
-        font-size: 1.45rem;
+        font-size: 1.3rem;
+        font-weight: 300 !important;
         color: $white;
       }
 
@@ -100,6 +104,7 @@
         a:visited {
           color: $white;
           font-size: 2rem;
+          font-weight: 500;
         }
       }
     }
