--- a/src/components/hamburgerMenu/HamburgerMenu.module.css
+++ b/src/components/hamburgerMenu/HamburgerMenu.module.css
@@ -1,15 +1,18 @@
 .hamburger-menu {
   display: inline-block;
-  background-color: #fff;
-  width: 3rem;
-  padding: 0.75rem;
+  background-color: transparent;
+  width: 4rem;
+  padding: 0.75rem 0;
   aspect-ratio: 16/16;
   border-radius: 50%;
-  transition: all 0.3s; }
+  transition: all 0.2s ease-out; }
   .hamburger-menu:hover, .hamburger-menu:active {
-    background-color: gray; }
+    background-color: #af0061; }
   .hamburger-menu__button {
     background: none;
+    background-position: center !important;
+    background-size: contain !important;
+    background-repeat: no-repeat !important;
     border: none;
     display: block;
     width: 100%;
