--- a/src/components/headingDescBtn/HeadingDescBtn.module.css
+++ b/src/components/headingDescBtn/HeadingDescBtn.module.css
@@ -10,12 +10,20 @@
     margin-bottom: 1rem; }
   .heading-desc-btn-textbox__heading {
     font-family: inherit;
-    font-size: 3rem;
+    font-size: 2.5rem;
+    font-weight: 600;
     margin-bottom: 1.2rem;
     line-height: 1.1; }
   .heading-desc-btn-textbox__subheading {
     font-size: 1.6rem;
     margin-bottom: 1.3rem; }
+  .heading-desc-btn-textbox__description {
+    font-size: 1.6rem; }
+  .heading-desc-btn-textbox__list-of-text {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem; }
   .heading-desc-btn-textbox .button-group {
     display: flex;
     flex-direction: row;
