--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -36,8 +36,8 @@
   padding: 0 2.5rem;
   margin: 2.5rem auto;
   border-inline: 1px solid #ddd; }
-  .our-services div[class*="textbox"] h3[class*="heading"] {
-    font-size: 2.2rem; }
+.our-services h3[class*="heading"] {
+  font-size: 2.2rem; }
 .our-services p[class*="description"] {
   line-height: 1.4;
   font-weight: 300;
