--- a/src/components/mobileNavbar/mobileNavigationInnerMenu/MobileNavigationInnerMenu.module.css
+++ b/src/components/mobileNavbar/mobileNavigationInnerMenu/MobileNavigationInnerMenu.module.css
@@ -8,8 +8,7 @@
   background-color: rgba(175, 0, 97, 0.9);
   backdrop-filter: blur(1rem);
   padding-inline: 3.5rem;
-  transition: all 0.2s ease-out;
-  font-family: "Roboto", sans-serif !important; }
+  transition: all 0.2s ease-out; }
   .mobile-navigation-innermenu__closelisticon-container .closelisticon {
     all: unset;
     margin-left: auto;
@@ -71,7 +70,7 @@
     .mobile-navigation-innermenu__list-of-options__single-option a:link,
     .mobile-navigation-innermenu__list-of-options__single-option a:visited {
       font-size: 1.2rem;
-      font-weight: 300 !important;
+      font-weight: 400 !important;
       color: #fff; }
     .mobile-navigation-innermenu__list-of-options__single-option--main-list span,
     .mobile-navigation-innermenu__list-of-options__single-option--main-list a:link,
