--- a/src/components/testimonial/Testimonial.module.scss
+++ b/src/components/testimonial/Testimonial.module.scss
@@ -21,9 +21,8 @@
     &__one-liner {
       padding: 1rem;
       font-size: 2rem;
-      font-weight: 400;
+      font-weight: 500;
       color: $secondary;
-      letter-spacing: 0.01rem;
     }
 
     &__details {
@@ -35,15 +34,15 @@
       padding-bottom: 2rem;
       line-height: 1.25;
       letter-spacing: 0.05rem;
-      margin-bottom: 1.2rem;
+      margin-bottom: 1rem;
       font-weight: 400;
     }
 
     &__person-name {
       padding: 1rem;
       font-size: 1.6rem;
-      color: $darkText;
-      font-weight: 500;
+      color: $black;
+      font-weight: 400;
       letter-spacing: 0.02rem;
     }
   }
