--- a/src/components/testimonial/Testimonial.module.scss
+++ b/src/components/testimonial/Testimonial.module.scss
@@ -41,7 +41,7 @@
     &__person-name {
       padding: 1rem;
       font-size: 1.6rem;
-      color: $black;
+      color: $darkText;
       font-weight: 400;
       letter-spacing: 0.02rem;
     }
