--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -87,8 +87,26 @@
 }
 
 .testimonial {
+  margin-bottom: $sectionMargin;
+
   div[class*="plain-description-box"] {
-    margin-bottom: 2.5rem;
+    margin-bottom: 3rem;
     letter-spacing: 0.04rem;
+  }
+}
+
+.form-section {
+  margin-bottom: $sectionMargin;
+
+  div[class*="plain-description-box"] {
+    margin-bottom: 1rem;
+    letter-spacing: 0.04rem;
+  }
+
+  div[class*="submit-button"] {
+    button {
+      font-weight: 600;
+      text-transform: uppercase;
+    }
   }
 }
