--- a/src/components/form/Form.module.scss
+++ b/src/components/form/Form.module.scss
@@ -29,30 +29,46 @@
       top: 5.5rem;
       left: 0;
       padding: 0 3rem;
-      transition: all 0.2s;
+      transition: all 0.4s;
     }
 
     &__success-message {
-      background-color: rgba($gray, 0.3);
-      backdrop-filter: blur(1rem);
+      gap: 0 !important;
       color: $white;
-      padding: 5rem 3rem 6rem;
-      clip-path: polygon(0 10%, 100% 0, 100% 90%, 0% 100%);
+      padding: 2.5rem;
+      align-items: center;
+
+      &__checkbox {
+        width: 5rem;
+        aspect-ratio: 16/16;
+        @include flex-all-center();
+        border-radius: 50%;
+        overflow: hidden;
+        background-color: $primary;
+        margin-bottom: 2.5rem;
+
+        img {
+          display: block;
+          width: 100%;
+          padding: 1rem;
+        }
+      }
 
       &__heading {
         font-size: 2rem;
         font-weight: 600;
-        text-transform: uppercase;
+        text-transform: capitalize;
         line-height: 1.3;
         text-align: center;
+        margin-bottom: 3rem;
       }
 
       &__details {
-        font-size: 1.8rem;
+        font-size: 1.7rem;
         line-height: 1.3;
         letter-spacing: 0.05rem;
         font-weight: 500;
-        // text-transform: uppercase;
+        margin-bottom: 3rem;
       }
     }
 
@@ -70,4 +86,8 @@
 .hidden {
   transform: translateY(-100%);
   opacity: 0;
+}
+
+.final-background {
+  backdrop-filter: blur(1rem) !important;
 }
