--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -52,3 +52,10 @@
   justify-content: center;
   align-items: center;
 }
+
+//transform mixins
+@mixin position-center() {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+}
