--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,6 +7,7 @@ $black: #000;
 $backdropColor: rgba(17, 17, 17, 0.36);
 $veryLightGray: #ddd;
 $gray: darken($white, 50%);
+$success: #008000;
 
 //margins and paddings
 $sectionMargin: 5rem;
