--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -96,7 +96,7 @@
 }
 
 .form-section {
-  margin-bottom: $sectionMargin;
+  margin-bottom: 6rem;
 
   div[class*="plain-description-box"] {
     margin-bottom: 1rem;
