--- a/src/components/form/Form.module.css
+++ b/src/components/form/Form.module.css
@@ -13,7 +13,8 @@
     padding: 5.5rem 3rem;
     background-color: rgba(34, 34, 34, 0.85);
     clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%);
-    position: relative; }
+    position: relative;
+    transition: all 0.2s ease-out; }
     .form-container__form__basic-information, .form-container__form__additional-information, .form-container__form__success-message {
       display: flex;
       flex-direction: column;
@@ -60,14 +61,16 @@
       margin-top: 1rem; }
 
 .visible {
-  transform: translateY(0%);
-  opacity: 1; }
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.4s 0.4s; }
 
 .hidden {
-  transform: translateY(-100%);
-  opacity: 0; }
+  opacity: 0;
+  visibility: collapse; }
 
 .final-background {
-  backdrop-filter: blur(1rem) !important; }
+  backdrop-filter: blur(1rem) !important;
+  transition: all 0.4s; }
 
 /*# sourceMappingURL=Form.module.css.map */
