--- a/src/components/form/Form.module.scss
+++ b/src/components/form/Form.module.scss
@@ -18,6 +18,7 @@
     background-color: rgba($darkText, 0.85);
     clip-path: polygon(0 5%, 100% 0, 100% 100%, 0% 100%);
     position: relative;
+    transition: $basic;
 
     &__basic-information,
     &__additional-information,
@@ -79,15 +80,17 @@
 }
 
 .visible {
-  transform: translateY(0%);
   opacity: 1;
+  visibility: visible;
+  transition: all 0.4s 0.4s;
 }
 
 .hidden {
-  transform: translateY(-100%);
   opacity: 0;
+  visibility: collapse;
 }
 
 .final-background {
   backdrop-filter: blur(1rem) !important;
+  transition: all 0.4s;
 }
