--- a/src/components/selectBox/SelectBox.module.css
+++ b/src/components/selectBox/SelectBox.module.css
@@ -11,9 +11,10 @@
   .selectbox-container span[class*="highlighted-secondary"] {
     font-size: 2rem; }
   .selectbox-container__error {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     letter-spacing: 0.05rem;
-    color: #fff; }
+    color: #ff0000;
+    font-weight: 400; }
   .selectbox-container select {
     display: block;
     border: none;
