--- a/src/components/submitButton/SubmitButton.module.css
+++ b/src/components/submitButton/SubmitButton.module.css
@@ -10,6 +10,9 @@
   transition: all 0.2s;
   background-color: #af0061;
   font-family: inherit; }
+.submit-button button:disabled {
+  opacity: 0.5;
+  background-color: inherit; }
 .submit-button__button:active {
   background-color: #7c0045; }
 
