--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,6 +8,7 @@ $backdropColor: rgba(17, 17, 17, 0.36);
 $veryLightGray: #ddd;
 $gray: darken($white, 50%);
 $success: #008000;
+$error: #ff0000;
 
 //margins and paddings
 $sectionMargin: 5rem;
